// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex component matches snapshot (default props) 1`] = `
<div
  className="flex flex--row flex--alignStretch flex--alignStretch"
/>
`;

exports[`Flex component matches snapshot (set all props) 1`] = `
<div
  className="flex flex--column flex--alignEnd flex--justifySpaceBetween flex--column--reverse flex--justifySpaceBetween flex--alignEnd flex--wrap flex--noGutters foo"
/>
`;
